# hodei-jobs

./: .dockerignore  .env.development  .env.example  .gitignore  ANALISIS_MEJORAS_Y_DEUDA_TECNICA_UNIFICADO.md  AUTO_PROVISIONING_TEST_REPORT.md  CHANGELOG.md  CORRECCIONES_IMPLEMENTADAS.md  COUPLING_COHESION_CONNASCENCE.md  Cargo.toml  DDD_SOLID_ARCHITECTURE_ANALYSIS.md  DEBT-003-IMPLEMENTATION-REPORT.md  DEBT-003-PHASE-4D-REPORT.md  DEBT-003-REVIEW-REPORT.md  DEBUGGING.md  DEVELOPMENT.md  Dockerfile  Dockerfile.dev  Dockerfile.server  Dockerfile.worker  E2E_TEST_REPORT.md  EPIC-41-IMPLEMENTATION-REPORT.md  EPIC-42-IMPLEMENTATION-REPORT.md  EPICS_Y_HISTORIAS_USUARIO.md  EVENTS-COVERAGE-ANALYSIS.md  GETTING_STARTED.md  GETTING_STARTED_KUBERNETES.md  GRPC_SETUP_GUIDE.md  LICENSE  MAVEN_SOLUTION_WORKING.md  PROBLEMAS_ANALISIS.md  QUICK_START_JOBS.md  README.md  README_ES.md  REPORTE_FINAL_CORRECCIONES.md  REPORTE_PRUEBA_E2E.md  SCRIPTS_README.md  SERVICES_CATALOG.md  WORKER_IMPROVEMENTS_MASTER_PLAN.md  bacon.toml  (+11 more)
crates/cli/: Cargo.toml  IMPLEMENTACION_COMPLETADA.md  README.md  demo.sh  quick-demo.sh
crates/cli/src/: main.rs
crates/console-web/: Caddyfile.prod  Cargo.toml  Dockerfile  Dockerfile.prod  README.md  build.sh
crates/console-web/assets/: index.html  style.css
crates/console-web/assets/pkg/: hodei_operator_web.d.ts  hodei_operator_web.js  hodei_operator_web_bg.wasm  hodei_operator_web_bg.wasm.d.ts  package.json
crates/console-web/src/: api.rs  lib.rs  server.rs  server_functions.rs  state.rs  store.rs  types.rs
crates/console-web/src/components/: data_table.rs  layout.rs  mod.rs  nav.rs  provider_forms.rs  provider_wizard.rs  stats_card.rs  status_badge.rs  theme.rs  theme_toggle.rs  worker_detail.rs
crates/console-web/src/grpc/: mod.rs
crates/console-web/src/pages/: dashboard.rs  jobs.rs  mod.rs  providers.rs  scheduler.rs  settings.rs  worker_pools.rs  workers.rs
crates/console-web/tests/: mod.rs
crates/domain/: Cargo.toml
crates/domain/src/: audit.rs  event_bus.rs  events.rs  job_execution.rs  job_execution_coordination.rs  job_scheduler.rs  job_template.rs  lib.rs  otp_token_store.rs  provider_config.rs  request_context.rs  shared_kernel.rs  tests.rs  worker.rs  worker_provider.rs  worker_registry.rs
crates/grpc/: Cargo.toml
crates/grpc/examples/: server.rs
crates/grpc/src/: lib.rs  tests.rs  worker_command_sender.rs
crates/grpc/tests/: audit_validation_e2e.rs  e2e_docker_provider.rs  e2e_firecracker_provider.rs  e2e_job_flow_test.rs  e2e_kubernetes_provider.rs  e2e_test_provider_test.rs  grpc_integration.rs  job_controller_integration.rs  postgres_grpc_e2e.rs
crates/infrastructure/: Cargo.toml
crates/infrastructure/src/: lib.rs  persistence.rs  repositories.rs  tests.rs
crates/infrastructure/tests/: docker_integration.rs  event_bus_it.rs  firecracker_integration.rs  kubernetes_integration.rs  postgres_integration.rs  postgres_job_queue_integration.rs  postgres_job_repo_integration.rs  postgres_provider_config_repo_integration.rs  postgres_worker_repo_integration.rs
crates/interface/: Cargo.toml
crates/interface/src/: api.rs  lib.rs
crates/operator/: Cargo.toml  Dockerfile  build.rs
crates/operator/src/: lib.rs
crates/saga-engine/core/: Cargo.toml
crates/saga-engine/local/: Cargo.toml
crates/saga-engine/metrics/: Cargo.toml
crates/saga-engine/nats/: Cargo.toml
crates/saga-engine/pg/: Cargo.toml
crates/saga-engine/sqlite/: Cargo.toml
crates/saga-engine/testing/: Cargo.toml
crates/server/application/: Cargo.toml
crates/server/domain/: Cargo.toml
crates/server/infrastructure/: Cargo.toml
crates/server/interface/: Cargo.toml
crates/server/shared/: Cargo.toml
crates/shared/: Cargo.toml
crates/shared/src/: error.rs  event_topics.rs  ids.rs  lib.rs  states.rs
crates/worker/application/: Cargo.toml
crates/worker/domain/: Cargo.toml
crates/worker/infrastructure/: Cargo.toml
proto/: Cargo.toml  all.proto  audit.proto  buf.yaml  build.rs  common.proto  hodei.v1.proto  hodei_all_in_one.proto  job_execution.proto  job_templates.proto  metrics.proto  provider_management.proto  scheduled_jobs.proto  scheduler.proto  worker_agent.proto
proto/src/: lib.rs
scripts/: Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md  README_STREAMING.md  RUST_LOG_STREAMER.md  RUST_RUNNER.md  SOLUTION.md  battery-tests.sh  buffering-diagnostic.sh  build-and-push.sh  build-local.sh  build-minikube.sh  build-web.sh  build_and_push.rs  build_local.rs  build_minikube.rs  clean-system.sh  clean_system.rs  cleanup.sh  debug-job-timeline.sh  debug-job.sh  debug_job.rs  debug_job_timeline.rs  deploy-hodei.sh  deploy-minikube.sh  dev-db.sh  dev-hotreload.sh  dev-k8s-services.sh  dev-server.sh  dev-setup.sh  dev-start.sh  dev-telepresence.sh  dev.sh  dev_db.rs  dev_server.rs  dev_start.rs  dev_workflow.rs  devspace-start.sh  diagnostic-stream.sh  diagnostico-dispatcher.sh  (+51 more)
scripts/Core Development/: dev.sh  setup.sh
scripts/Core_Development/: start.sh
scripts/Job Execution/: run_maven_job.sh
scripts/Job_Execution/: maven_job_with_logs.sh  run_maven_job.sh
scripts/Monitoring & Debugging/: list-jobs.sh
scripts/Server_Management/: rebuild_server.sh
scripts/Worker_Management/: rebuild_worker.sh
scripts/create-nats-streams/: Cargo.toml
scripts/create-nats-streams/src/: main.rs
scripts/docker/: Dockerfile.worker  Dockerfile.worker-dev  README.md  build-worker-image.sh  check-env.sh
scripts/e2e/: README.md  run-docker-e2e.sh
scripts/examples/: 01-hello-world.sh  02-data-processing.sh  03-ml-training.sh  04-cicd-build.sh  05-cpu-stress.sh  06-error-handling.sh  README.md  cpu-stress.sh  error-scenarios.sh  file-processing.sh  log-generator.sh  long-running.sh  parallel-tasks.sh  system-info.sh
scripts/firecracker/: README.md  build-rootfs.sh  check-env.sh
scripts/kubernetes/: Dockerfile.worker  README.md  build-worker-image.sh  check-env.sh
scripts/testing/: e2e_test_procedure.sh  high_volume_logs.sh  long_running_job.sh  run_test_battery.sh
scripts/verification/: check_os.sh  maven_build_job.sh  verify_maven.sh
(+879 files in other folders)
