[workspace]
resolver = "3"
members = [
    "crates/domain",
    "crates/application",
    "crates/infrastructure",
    "crates/interface",
    "crates/grpc",
    "crates/cli",
    "proto",
]

[workspace.package]
version = "0.1.5"
edition = "2024"
license = "MIT"
authors = ["Hodei Team Platform"]

[workspace.dependencies]
# Internal crates
hodei-jobs-domain = { path = "crates/domain" }
hodei-jobs-application = { path = "crates/application" }
hodei-jobs-infrastructure = { path = "crates/infrastructure" }
hodei-jobs-interface = { path = "crates/interface" }
hodei-jobs-grpc = { path = "crates/grpc" }
hodei-jobs-cli = { path = "crates/cli" }
hodei-jobs = { path = "proto" }

# Async runtime
tokio = { version = "1.44", features = ["full"] }
tokio-stream = "0.1"
tokio-test = "0.4"
async-trait = "0.1"
async-stream = "0.3"
futures-core = "0.3"
futures = "0.3"
pin-project-lite = "0.2"

# HTTP & Web
axum = { version = "0.8", features = ["json"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
hyper = "1.8"
http = "1.4"
http-body-util = "0.1"

# gRPC & Protocol Buffers
tonic = { version = "0.14", features = ["transport", "codegen"] }
tonic-build = "0.14"
tonic-prost-build = "0.14"
tonic-prost = "0.14"
tonic-web = "0.14"
prost = { version = "0.14" }
prost-types = "0.14"
prost-build = "0.14"
tonic-reflection = "0.14"

# Data & Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.19", features = ["v4", "serde"] }
bytes = "1.6"
anyhow = "1.0"
thiserror = "2.0"

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-opentelemetry = "0.32"
opentelemetry = { version = "0.31", features = ["trace", "metrics"] }

# Testing
mockall = "0.14"
tempfile = "3.23"
assert_matches = "1.5"

# CLI
clap = { version = "4.5", features = ["derive", "cargo"] }
clap_complete = "4.5"

# External APIs (for providers)
reqwest = { version = "0.12", features = ["json"] }
kube = { version = "2.0.1", features = ["runtime", "client", "derive"] }
k8s-openapi = { version = "0.26", features = ["latest"] }
bollard = "0.19"
# Firecracker microVM
hyper-util = { version = "0.1", features = ["client-legacy", "http1", "tokio"] }
hyperlocal = "0.9"
nix = { version = "0.30", features = [
    "net",
    "ioctl",
    "fs",
    "process",
    "signal",
] }

# Configuration
config = "0.15"
dotenvy = "0.15"

# Metrics & Monitoring
metrics = "0.24"
metrics-exporter-prometheus = "0.18"

# Database
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "postgres",
    "uuid",
    "chrono",
    "json",
] }

# Utilities
rand = "0.9"
