[workspace]
resolver = "3"
members = [
    "crates/shared",
    "crates/server/domain",
    "crates/server/application",
    "crates/server/infrastructure",
    "crates/server/interface",
    "crates/server/bin",
    "crates/worker/domain",
    "crates/worker/application",
    "crates/worker/infrastructure",
    "crates/worker/bin",
    "crates/cli",
    "proto",
]

[workspace.package]
version = "0.4.0"
edition = "2024"
license = "MIT"
authors = ["Hodei Team Platform"]

[workspace.dependencies]
# Internal crates
hodei-shared = { path = "crates/shared" }
hodei-server-domain = { path = "crates/server/domain" }
hodei-server-application = { path = "crates/server/application" }
hodei-server-infrastructure = { path = "crates/server/infrastructure" }
hodei-server-interface = { path = "crates/server/interface" }
# Aliases for backward compatibility if needed, but better to use new names
# Usage: hodei-jobs-domain = { workspace = true } in old files might need update
# OR I can alias them here:
hodei-jobs-domain = { path = "crates/server/domain" }
hodei-jobs-application = { path = "crates/server/application" }
hodei-jobs-infrastructure = { path = "crates/server/infrastructure" }
hodei-jobs-interface = { path = "crates/server/interface" }
hodei-jobs-grpc = { path = "crates/server/interface" } # Temporary alias? No, grpc is inside interface now.
hodei-jobs-cli = { path = "crates/cli" }
hodei-jobs = { path = "proto" }

hodei-worker-domain = { path = "crates/worker/domain" }
hodei-worker-application = { path = "crates/worker/application" }
hodei-worker-infrastructure = { path = "crates/worker/infrastructure" }

# External Dependencies
tokio = { version = "1.48.0", features = ["full"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["codec"] }
tonic = { version = "0.14.2", features = ["transport", "tls-native-roots"] }
tonic-web = "0.14"
tonic-reflection = "0.14"
prost = "0.14.1"
prost-types = "0.14.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9.33"
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-opentelemetry = "0.24"
opentelemetry = { version = "0.23", features = ["trace"] }
opentelemetry-sdk = { version = "0.23", features = ["trace"] }
opentelemetry-otlp = { version = "0.16", features = ["trace"] }
thiserror = "2.0"
anyhow = "1.0"
async-trait = "0.1"
futures = "0.3"
futures-core = "0.3"
axum = "0.8.7"
tower = "0.5.1"
tower-http = "0.6.2"
hyper = "1.5.0"
http = "1.1"
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
hyperlocal = "0.9"
nix = { version = "0.30.1", features = ["process", "signal"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "migrate"] }
config = "0.15.19"
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5.62"
reqwest = { version = "0.12.26", features = ["json"] }
rand = "0.9.2"
bcrypt = "0.17.1"
jsonwebtoken = "10.2.0"
validator = { version = "0.20.0", features = ["derive"] }
mockall = "0.14.0"
testcontainers = "0.26.0"
testcontainers-modules = { version = "0.14.0", features = ["postgres"] }
bollard = "0.19.4"
textplots = "0.8"
sysinfo = "0.37.2"
dashmap = "6.1"
image = "0.25"
base64 = "0.22"
csv = "1.3"
lapin = "3.7.2"
deadpool-lapin = "0.13.1"
kube = { version = "2.0.1", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.26.1", features = ["v1_31"] }
prometheus = "0.14.0"
once_cell = "1.19.0"
lazy_static = "1.5"
x509-parser = "0.16"
rcgen = "0.11"
rustls-pemfile = "2.1"
bytes = "1.9"
tempfile = "3.14"
zip = "6.0.0"
regex = "1.11"
glob = "0.3"
tar = "0.4"
flate2 = "1.0"
sha2 = "0.10"
hex = "0.4"
aes-gcm = "0.10"
zeroize = { version = "1.8", features = ["derive"] }
url = "2.5"
mime = "0.3"
mime_guess = "2.0"
walkdir = "2.5"
async-stream = "0.3"
secrecy = "0.10"
secrecy-serde = "0.10"
hmac = "0.12"
pin-project-lite = "0.2"
fs_extra = "1.3"
tonic-build = "0.14.2"
prost-build = "0.14.1"
assert_matches = "1.5"
tonic-prost = "0.14"
tonic-prost-build = "0.14"

# Dev dependencies
[workspace.dependencies.tokio-test]
version = "0.4"
