[package]
name = "hodei-scripts"
version = "0.1.0"
edition = "2021"
description = "Hodei Jobs Platform development scripts"

[[bin]]
name = "setup_minikube"
path = "bin/setup_minikube.rs"

[[bin]]
name = "build_minikube"
path = "bin/build_minikube.rs"

[dependencies]
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
