[package]
name = "hodei-jobs-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "CLI para gestión del Hodei Job Platform"

[dependencies]
# CLI parsing
clap = { workspace = true }
clap_complete = { workspace = true }

# Async runtime
tokio = { workspace = true }

# gRPC client
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Date/time handling
chrono = { workspace = true }

# JSON handling
serde = { workspace = true }
serde_json = { workspace = true }

# Hodei Job Platform core
hodei-jobs = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }

[[bin]]
name = "hodei-jobs-cli"
path = "src/main.rs"

[dev-dependencies]
tempfile = { workspace = true }
mockall = { workspace = true }