[package]
name = "hodei-console-web"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Hodei Jobs Administration Console - Leptos SSR with gRPC client"

[lib]
path = "src/lib.rs"

[features]
default = ["ssr"]
ssr = ["leptos/ssr", "dep:axum", "dep:tower", "dep:tower-http", "dep:hyper", "dep:tokio"]

[dependencies]
# Workspace dependencies
tokio = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
futures.workspace = true
reqwest.workspace = true

# Internal proto crate
hodei-jobs = { workspace = true }

# gRPC client
tonic = { workspace = true }
prost = { workspace = true }

# Leptos framework
leptos = { workspace = true }
leptos_router = { workspace = true }
leptos_meta = { workspace = true }

# HTTP framework for SSR
axum = { version = "0.7", optional = true }
tower = { version = "0.4", optional = true }
tower-http = { version = "0.5", optional = true, features = ["cors", "fs"] }
hyper = { version = "1.0", optional = true }

# WASM-specific dependencies (only for client-side, not SSR)
wasm-bindgen = { version = "0.2", optional = true }
getrandom = { version = "0.2", features = ["js"], optional = true }
gloo-net = { version = "0.6.0", optional = true }
gloo-console = { version = "0.3", optional = true }
console_log = { version = "1.0", optional = true }

[target.'cfg(not(feature = "ssr"))'.dependencies.web-sys]
version = "0.3"
optional = true
features = [
    "Window", "Document", "Element", "HtmlElement", "Node",
    "Event", "KeyboardEvent", "MouseEvent", "FormData",
    "Response", "Headers", "Request", "RequestInit", "RequestMode",
    "console", "Storage", "Location", "History", "Url", "UrlSearchParams",
]

wasm-bindgen-futures = { version = "0.4", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"
console_error_panic_hook = "0.1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
