[package]
name = "hodei-console-web"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Hodei Jobs Administration Console - Leptos SSR with gRPC client"

[[bin]]
name = "hodei-console-web"
path = "src/bin/main.rs"

[lib]
path = "src/lib.rs"

[features]
default = ["ssr"]
ssr = [
    "leptos/ssr",
    "dep:axum",
    "dep:tower",
    "dep:tower-http",
    "dep:hyper",
    "dep:tokio",
    "dep:http",
    "dep:clap",
    "dep:tracing-subscriber",
]
client = [
    "dep:wasm-bindgen",
    "dep:getrandom",
    "dep:gloo-net",
    "dep:gloo-console",
    "dep:console_log",
    "dep:wasm-bindgen-futures",
    "dep:web-sys",
]

[dependencies]
# Workspace dependencies
tokio = { workspace = true, optional = true, features = ["full"] }
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", optional = true }
futures.workspace = true
reqwest.workspace = true

# Internal proto crate
hodei-jobs = { workspace = true }

# gRPC client
tonic = { workspace = true }
prost = { workspace = true }

# Leptos framework
leptos = { workspace = true }
leptos_router = { workspace = true }
leptos_meta = { workspace = true }

# HTTP framework for SSR
axum = { version = "0.7", optional = true }
tower = { version = "0.4", optional = true }
tower-http = { version = "0.5", optional = true, features = ["cors", "fs", "timeout", "trace"] }
hyper = { version = "1.0", optional = true }
http = { version = "1.0", optional = true }

# CLI arguments parsing
clap = { version = "4.4", features = ["derive"], optional = true }

# WASM-specific dependencies (only for client-side)
wasm-bindgen = { version = "0.2", optional = true }
getrandom = { version = "0.2", features = ["js"], optional = true }
gloo-net = { version = "0.6.0", optional = true }
gloo-console = { version = "0.3", optional = true }
console_log = { version = "1.0", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }

[target.'cfg(not(feature = "ssr"))'.dependencies.web-sys]
version = "0.3"
optional = true
features = [
    "Window", "Document", "Element", "HtmlElement", "Node",
    "Event", "KeyboardEvent", "MouseEvent", "FormData",
    "Response", "Headers", "Request", "RequestInit", "RequestMode",
    "console", "Storage", "Location", "History", "Url", "UrlSearchParams",
]

[dev-dependencies]
wasm-bindgen-test = "0.3"
console_error_panic_hook = "0.1"
rstest = "0.22"           # Fixture-based testing for components
test-case = "3.3"          # Parametrization
tokio-test = "0.4"         # Async testing
trybuild = "1.0"           # Compile-time tests

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
