[package]
name = "hodei-jobs-grpc"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
# Internal dependencies
hodei-jobs-domain = { workspace = true }
hodei-jobs-application = { workspace = true }
hodei-jobs-infrastructure = { workspace = true, features = ["test-utils"] }
hodei-jobs = { workspace = true }

# Async runtime
tokio = { workspace = true }
tokio-stream = { workspace = true }
async-trait = { workspace = true }
async-stream = { workspace = true }

# gRPC & Protocol Buffers
tonic = { workspace = true }
tonic-web = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
tonic-reflection = { workspace = true }
tower-http = { workspace = true }

# Data & Serialization
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging & Tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-opentelemetry = { workspace = true }
opentelemetry = { workspace = true }

# Configuration
config = { workspace = true }
dotenvy = { workspace = true }
sqlx = { workspace = true }

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "worker"
path = "src/bin/worker.rs"

[dependencies.hostname]
version = "0.4"

[dependencies.num_cpus]
version = "1.16"

[dev-dependencies]
tokio-test = { workspace = true }
sqlx = { workspace = true }
futures = { workspace = true }
# Usar versión más reciente compatible con bollard 0.19
testcontainers = { version = "0.26", features = ["properties-config"] }
testcontainers-modules = { version = "0.14", features = ["postgres"] }
