[package]
name = "hodei-jobs-infrastructure"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[features]
default = []
test-utils = []

[dependencies]
# Internal dependencies
hodei-jobs-domain = { workspace = true }
hodei-jobs-application = { workspace = true }

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }

# Data & Serialization
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
bytes = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

# External APIs
reqwest = { workspace = true }

# Database
sqlx = { workspace = true }

# Docker client
bollard = { workspace = true }

# Kubernetes client
kube = { workspace = true }
k8s-openapi = { workspace = true }

# Firecracker microVM
hyper = { workspace = true }
http = { workspace = true }
hyper-util = { workspace = true }
hyperlocal = { workspace = true }
http-body-util = { workspace = true }
nix = { workspace = true }

# Logging
tracing = { workspace = true }

# Streams
futures-util = "0.3"
async-stream.workspace = true
futures = "0.3.31"

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = "3.15"
testcontainers = "0.26"
testcontainers-modules = { version = "0.14", features = ["postgres"] }
