[package]
name = "hodei-jobs-interface"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
# Internal dependencies
hodei-jobs-domain = { workspace = true }
hodei-jobs-application = { workspace = true }
hodei-jobs-infrastructure = { workspace = true }

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }

# HTTP & Web
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
hyper = { workspace = true }

# Data & Serialization
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging & Tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Metrics & Monitoring
metrics = { workspace = true }

# Database
sqlx = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
http-body-util = "0.1.2"
tempfile = { workspace = true }
futures = { workspace = true }
hodei-jobs-infrastructure = { workspace = true, features = ["test-utils"] }
