[package]
name = "hodei-operator"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Kubernetes Operator for Hodei Jobs Platform - Manages CRDs and communicates with Hodei Server via gRPC"

[[bin]]
name = "hodei-operator"
path = "bin/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
# Workspace dependencies
tokio.workspace = true
kube = { workspace = true, features = ["runtime", "derive"] }
k8s-openapi.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
async-trait.workspace = true
futures.workspace = true
tracing.workspace = true
chrono.workspace = true
uuid.workspace = true
clap = { workspace = true }

# Internal proto crate
hodei-jobs = { workspace = true }

# Operator-specific
schemars = { version = "1.1.0", features = ["derive"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tonic = { workspace = true }
prost = { workspace = true }
hostname = "0.4"

[dev-dependencies]
tempfile.workspace = true
assert_matches.workspace = true

[build-dependencies]
