[package]
name = "hodei-shared"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
uuid = { workspace = true, features = ["v4", "serde"] }
thiserror = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
dotenv = "0.15"

[dev-dependencies]
serde_json = { workspace = true }
