[package]
name = "saga-engine-core"
description = "Core saga engine library with zero infrastructure dependencies - Event Sourcing, Workflows, and Activities"
version.workspace = true
edition = "2024"
license.workspace = true
authors.workspace = true

[features]
default = ["json-codec", "bincode-codec"]
json-codec = ["serde_json"]
bincode-codec = ["bincode"]

[dependencies]
# Async runtime
async-trait = { workspace = true }
tokio = { workspace = true, features = ["sync", "macros"] }

# Serialization
serde = { workspace = true, features = ["derive", "rc"] }
serde_json = { version = "1", optional = true, features = ["preserve_order"] }
bincode = { version = "1", optional = true }

# Time and IDs
chrono = { workspace = true, features = ["serde"] }
uuid = { workspace = true, features = ["v4", "serde"] }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Utilities
futures = { workspace = true }
parking_lot = { workspace = true }

# Cryptography for snapshot checksums
sha2 = { workspace = true, features = ["asm"] }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
serde_json = "1"
assert_matches = "1"
