[package]
name = "saga-engine-core"
description = "Core saga engine library with zero infrastructure dependencies - Event Sourcing, Workflows, and Activities"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[features]
default = ["json-codec", "bincode-codec", "postcard-codec"]
json-codec = ["serde_json"]
bincode-codec = ["bincode"]
postcard-codec = ["postcard"]

[dependencies]
# Async runtime
async-trait = { workspace = true }
tokio = { workspace = true, features = ["sync", "macros"] }

# Serialization
serde = { workspace = true, features = ["derive", "rc"] }
serde_json = { workspace = true, optional = true, features = ["preserve_order"] }
bincode = { version = "1", optional = true }
postcard = { version = "1", optional = true, default-features = false, features = ["alloc", "use-std"] }

# Time and IDs
chrono = { workspace = true, features = ["serde"] }
uuid = { workspace = true, features = ["v4", "serde"] }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Utilities
futures = { workspace = true }
parking_lot = { workspace = true }

# Cryptography for snapshot checksums
sha2 = { workspace = true, features = ["asm"] }

# Random for retry jitter
rand = { workspace = true }

# Tracing for observability
tracing = { workspace = true }
dashmap = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing-opentelemetry = { workspace = true }
opentelemetry = { workspace = true, features = ["trace"] }
opentelemetry_sdk = { workspace = true, features = ["trace"] }

[dev-dependencies]
tokio = { workspace = true, features = ["sync", "macros"] }
serde_json = "1"
assert_matches = "1"
criterion = { version = "0.5", features = ["html_reports"] }

