[package]
name = "saga-engine-metrics"
description = "Prometheus metrics for saga-engine v4 - Observability and instrumentation"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
# Prometheus for metrics - use version compatible with workspace
prometheus = "0.14"

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
