[package]
name = "saga-engine-nats"
description = "NATS backend for saga-engine - SignalDispatcher and TaskQueue using NATS Core"
version.workspace = true
edition = "2024"
license.workspace = true
authors.workspace = true

[dependencies]
# Core saga engine
saga-engine-core = { path = "../core" }

# Async trait for trait implementations
async-trait = { workspace = true }

# NATS client - async-nats
async-nats = "0.45"

# Async runtime
tokio = { workspace = true, features = ["sync", "macros", "time", "fs"] }

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Time utilities
chrono = { workspace = true }

# Utilities
futures = { workspace = true }
tokio-stream = { workspace = true }
async-stream = { workspace = true }

# Logging
tracing = { workspace = true }

# UUID for message IDs
uuid = { workspace = true, features = ["v4", "serde"] }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
