[package]
name = "saga-engine-pg"
description = "PostgreSQL backend for saga-engine - EventStore, TimerStore, and SnapshotStore"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Hodei Team Platform"]

[dependencies]
# Core saga engine
saga-engine-core = { path = "../core" }

# Async trait for trait implementations
async-trait = "0.1"

# Database - using workspace sqlx version
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls", "json", "uuid", "chrono"] }

# Async runtime
tokio = { version = "1", features = ["sync", "macros", "time"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# Time
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }

# Cryptography for checksums
sha2 = { version = "0.10", features = ["asm"] }

# Utilities
parking_lot = "0.12"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
