[package]
name = "saga-engine-pg"
description = "PostgreSQL backend for saga-engine - EventStore, TimerStore, and SnapshotStore"
version.workspace = true
edition = "2024"
license.workspace = true
authors.workspace = true

[dependencies]
# Core saga engine
saga-engine-core = { path = "../core" }

# Async trait for trait implementations
async-trait = { workspace = true }

# Database - using workspace sqlx version
sqlx = { workspace = true, features = ["postgres", "runtime-tokio-rustls", "json", "uuid", "chrono"] }

# Async runtime
tokio = { workspace = true, features = ["sync", "macros", "time"] }

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Time
chrono = { workspace = true, features = ["serde"] }
uuid = { workspace = true, features = ["v4", "serde"] }

# Cryptography for checksums
sha2 = { workspace = true, features = ["asm"] }

# Utilities
parking_lot = { workspace = true }

# Tracing for logging
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
